GEOMESA-3521 Update to GeoTools 34